...
              thickness: 10,
            ),
            Container(
              height: 50,
              padding: const EdgeInsets.fromLTRB(10, 0, 10, 0),
              child: ElevatedButton(
                child: const Text('LOGIN'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    int check = await user.loginUser(
                        usernameController.text, passwordController.text);
                    if (check == 200) {
                      //display success message
...
                        SnackBar(
                          backgroundColor: Colors.blue,
                          content: Container(
                            height: 50.0,
                            child: const Center(
                              child: Text(
                                'Login Succesful',
                                style: TextStyle(
                                    color: Colors.white,
                                    fontWeight: FontWeight.bold),
                                textAlign: TextAlign.center,
                              ),
                            ),
...
                        SnackBar(
                          backgroundColor: Colors.red,
                          content: Container(
                            height: 50.0,
                            child: const Center(
                              child: Text(
                                'Failed to Login using credentials',
                                style: TextStyle(
                                    color: Colors.white,
                                    fontWeight: FontWeight.bold),
                                textAlign: TextAlign.center,
                              ),
                            ),
...
