...
  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: EdgeInsets.all(0),
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Profile'),
        ),
        body: ListView(
          children: <Widget>[
            const Divider(
              thickness: 20,
            ),
...
                }
              },
              icon: const Icon(Icons.remove_red_eye_outlined),
            ),
            TextButton(
              child: const Text(
                'LOGOUT',
                style: TextStyle(fontSize: 20),
              ),
              onPressed: () async {
                int check = await user.logoutUser();
                //pop pushed pages until you get to the login page
                if (check == 200) {
...
